package br.unitins.dto;


public record EnderecoDTO(
    String cep,
    String enderecoCompleto,
    String complemento,
    String referincia,
    Long idEstado
) {

    
    

}
