package br.unitins.dto;

public record TelefoneDTO (
    long id,
    String codigoDeArea,
    String numero,
    Boolean celular
){
   


}
